# welly

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .travis.yml  AUTHORS.md  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  authors.html  changelog.html  conftest.py  contributing.html  contributors.rst  development.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_tests.py  search.html  searchindex.js  setup.cfg  setup.py  welly.html  welly_composite_hacking.ipynb
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  welly.doctree
.doctrees/api/: api_toc.doctree  (+18 more)
_modules/: index.html  welly.html
_notebooks/: Curves.html  Quick_start.html  Wells.html
_sources/: authors.md.txt  index.rst.txt
_static/: custom.css
api/: api_toc.html  welly.canstrat.html  welly.canstrat_codes.html  welly.crs.html  welly.curve.html  welly.defaults.html  welly.fields.html  welly.header.html  welly.html  welly.las.html  welly.location.html  welly.plot.html  welly.project.html  welly.quality.html  welly.scales.html  welly.synthetic.html  welly.tools.html  welly.utils.html  welly.well.html
docs/: Makefile  changelog.md  conf.py  conf_dev.py  conf_prod.py  crs.rst  curve.rst  development.md  header.rst  index.rst  installation.md  license.md  location.rst  post_process_html.py  pre_process_ipynb.py  project.rst  requirements.txt  synthetic.rst  well.rst  welly.rst
source/: indices.html  intro.html  req.html
tests/: 1.las  2.las  F03-02.las  K90_strip_pred.csv  P-129_deviation_survey.csv  Well_1515_directional.csv  Well_object.html  Well_object.ipynb  test.las  test_canstrat.py  test_curve.py  test_las.py  test_location.py  test_plots.py  test_project.py  test_quality.py  test_synthetic.py  test_utils.py  test_well.py
tutorial/: 01_Well.ipynb  02_Curves.ipynb  03_Plotting.ipynb  04_Project.ipynb  05_Location.ipynb  06_Welly_and_LAS.ipynb  Curves.ipynb  Deviation.ipynb  Grungy_CSV_and_SHP_examples.ipynb  Location.ipynb  Plotting.ipynb  Project.ipynb  Synthetic.ipynb  Well.ipynb  Well_depth_units.ipynb  Well_depth_units_v0.4.7.ipynb  Wellington_KGS-1-32-wDST2_LASv3.las  Welly_and_LAS.ipynb  deviation.csv  lasio basics.ipynb  out.las  welly basics - matt.ipynb  welly basics.ipynb  welly_CSV_data.ipynb  welly_and_LAS.ipynb  welly_basics.ipynb  welly_composite_hacking.ipynb  welly_matt.ipynb  welly_plotting-Test.ipynb  welly_plotting.ipynb
userguide/: Curves.html  Projects.html  Quick_start.html  Wells.html
welly/: __init__.py  _version.py  canstrat.py  canstrat_codes.py  crs.py  curve.py  defaults.py  fields.py  header.py  las.py  location.py  log_utils.py  plot.py  project.py  quality.py  scales.py  scorecard.py  synthetic.py  templates.py  tools.py  utils.py  well.py
(+89 files in other folders)
