[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "welly"
dynamic = ["version"]
authors = [{ name = "The Welly Authors", email = "hello@agilescientific.com" }]
description = "Tools for making and managing well data."
readme = "README.md"
readme-content-type = "text/markdown"
homepage = "https://github.com/agilescientific/welly"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "lasio",
    "striplog",
    "tqdm",
    "wellpathpy",
    "requests"
]

[project.optional-dependencies]
docs = ["sphinx", "sphinxcontrib-apidoc", "myst_nb", "furo"]
test = ["pytest", "pytest-cov", "pytest-mpl"]
dev = ["build", "pytest", "pytest-cov", "pytest-mpl", "sphinx", "sphinxcontrib-apidoc", "myst_nb", "furo"]

[tool.hatch.metadata]
packages = ["welly"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--cov=welly",
  "--cov-config=pyproject.toml",
  "--mpl",
  "--mpl-baseline-path=tests/baseline",
]
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "welly/_version.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
