[metadata]
name = welly
version = attr: welly.__version__
author = Welly Authors
author_email = hello@agilescientific.com
description = Tools for making and managing well data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agile-geoscience/welly
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = welly
python_requires = >=3.6
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    lasio
    striplog
    tqdm
    wellpathpy
    requests

[options.extras_require]
docs = sphinx; myst_parser; sphinx_rtd_theme
test = pytest; pytest-cov; pytest-mpl
dev = build; pytest; pytest-cov; pytest-mpl; sphinx; myst_parser; sphinx_rtd_theme
